[gd_scene load_steps=3 format=3 uid="uid://ci62f57jcinle"]

[ext_resource type="Script" uid="uid://crkp8liqrbokp" path="res://scenes/powerController.gd" id="1_ia4iy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ia4iy"]
radius = 207.0
height = 544.0

[node name="Power Controller" type="Node2D"]
script = ExtResource("1_ia4iy")

[node name="Base" type="ColorRect" parent="."]
offset_left = -176.36363
offset_top = -74.545715
offset_right = 198.18181
offset_bottom = 274.5456
color = Color(0.47007585, 0.47007585, 0.47007585, 1)

[node name="Label" type="ColorRect" parent="."]
offset_left = -163.63635
offset_top = -65.4541
offset_right = 190.90909
offset_bottom = 3.6367188
color = Color(0.11858138, 0.11858138, 0.11858138, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Label"]
layout_mode = 0
offset_right = 3527.272
offset_bottom = 690.89844
scale = Vector2(0.1, 0.1)
theme_override_font_sizes/normal_font_size = 200
text = "Power Controller and Redirector"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="ColorRect" parent="."]
offset_left = -163.63635
offset_top = 18.182129
offset_right = 190.90909
offset_bottom = 214.54541
color = Color(0.16565639, 0.16565642, 0.16565639, 1)

[node name="ReservedAmount" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 9.636353
offset_top = 119.99951
offset_right = 108.63635
offset_bottom = 149.09033
text = "100KWH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reserves" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 16.363691
offset_top = 87.27228
offset_right = 109.09093
offset_bottom = 112.72638
text = "RESERVES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OxygenSlider" type="HSlider" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 173.54543
offset_top = 76.27237
offset_right = 269.90906
offset_bottom = 92.27237
scale = Vector2(0.655, 0.655)
value = 75.0

[node name="HSlider2" type="HSlider" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 174.54543
offset_top = 111.45432
offset_right = 270.90906
offset_bottom = 127.45432
scale = Vector2(0.655, 0.655)
value = 75.0

[node name="HSlider3" type="HSlider" parent="Panel"]
z_index = 1
layout_mode = 0
offset_left = 172.54543
offset_top = 139.36328
offset_right = 268.90906
offset_bottom = 155.36328
scale = Vector2(0.655, 0.655)
value = 75.0

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 137.63635
offset_top = 54.81787
offset_right = 310.3636
offset_bottom = 80.27197
text = "OXYGENATOR:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 144.63635
offset_top = 87.81787
offset_right = 284.5454
offset_bottom = 113.27198
theme_override_font_sizes/normal_font_size = 16
text = "H2O RECLAIMER:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 146.63635
offset_top = 115.908646
offset_right = 354.5454
offset_bottom = 141.36275
text = "LIGHTS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="Panel"]
position = Vector2(28.181816, 116.36319)
points = PackedVector2Array(0, 0, 70.90912, 0)
default_color = Color(0.19450986, 0.43819466, 2.117753e-06, 1)

[node name="Line2D2" type="Line2D" parent="Panel"]
position = Vector2(97.27272, 116.36319)
points = PackedVector2Array(0, 0, 62.363632, -34.54532, 159.36363, -34.54532)
default_color = Color(0.19450986, 0.43819466, 2.117753e-06, 1)

[node name="Line2D3" type="Line2D" parent="Panel"]
position = Vector2(97.27272, 116.36319)
points = PackedVector2Array(0, 0, 157.36363, -0.5453186)
default_color = Color(0.19450986, 0.43819466, 2.117753e-06, 1)

[node name="Line2D4" type="Line2D" parent="Panel"]
position = Vector2(97.27272, 116.36319)
points = PackedVector2Array(0, 0, 64.36363, 27.454681, 157.36363, 27.454681)
default_color = Color(0.19450986, 0.43819466, 2.117753e-06, 1)

[node name="RichTextLabel6" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 78.18182
offset_bottom = 39.99951
text = "Input:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel7" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 140.00002
offset_top = -0.00044389203
offset_right = 258.18182
offset_bottom = 39.99907
text = "Change:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Input Amount" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 63.636353
offset_right = 141.81818
offset_bottom = 40.0
text = "100kwj"
vertical_alignment = 1

[node name="Used Amount" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 231.63635
offset_top = -0.18212838
offset_right = 309.81818
offset_bottom = 39.81787
text = "100kwj"
vertical_alignment = 1

[node name="Oxygenator Count" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 281.63635
offset_top = 53.81787
offset_right = 363.63635
offset_bottom = 81.81787

[node name="ReclaimerCount" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 283.63635
offset_top = 88.81787
offset_right = 354.63635
offset_bottom = 116.81787

[node name="LightCount" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 283.63635
offset_top = 113.81787
offset_right = 369.63635
offset_bottom = 143.81787
text = ".1 KWH"
vertical_alignment = 1

[node name="Cover" type="ColorRect" parent="."]
z_index = 1
offset_left = -176.36365
offset_top = -70.90869
offset_right = 194.54544
offset_bottom = 269.0913
color = Color(1, 1, 1, 0)

[node name="ZoomPoint" type="Node2D" parent="."]
position = Vector2(11, 109)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, 95)
shape = SubResource("CapsuleShape2D_ia4iy")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
